messagepack-derive/tests/fail/default_missing.stderr
error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/fail/default_missing.rs:20:21
   |
20 |     assert_derive::<S1<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `Decode<'de>`:
             Option<V>
             ReferenceDecoder
             ReferenceStrBinDecoder
             ReferenceStrDecoder
note: required for `S1<NoDefault>` to implement `DecodeBorrowed<'_>`
  --> tests/fail/default_missing.rs:5:18
   |
 5 | #[derive(Encode, Decode)]
   |                  ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: required for `S1<NoDefault>` to implement `Decode<'_>`
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:35
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                                   ^^^^^^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | struct NoDefault;
   |

error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/fail/default_missing.rs:21:21
   |
21 |     assert_derive::<S2<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `Decode<'de>`:
             Option<V>
             ReferenceDecoder
             ReferenceStrBinDecoder
             ReferenceStrDecoder
note: required for `S2<NoDefault>` to implement `DecodeBorrowed<'_>`
  --> tests/fail/default_missing.rs:13:18
   |
13 | #[derive(Encode, Decode)]
   |                  ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: required for `S2<NoDefault>` to implement `Decode<'_>`
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:35
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                                   ^^^^^^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | struct NoDefault;
   |
